# ChadPlotter

./: CMakeLists.txt  ChadNet.cpp  main.cpp
examples/: client.cpp  client_lines.cpp
include/: ChadNet.h
